# parquet-store

./: README.md  pyproject.toml
parquet_store/: __init__.py
tests/: test_parquet_store.py
tests/data/path/to/symbols/: SYMBOL.parquet
