[tool.poetry]
name = "parquet-store"
version = "0.1.0"
description = "A simple datastore for parquet files"
authors = ["femtotrader <femto.trader@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parquet_store"}]

[tool.poetry.dependencies]
python = "^3.9"
fastparquet = "^2023.7.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
